# djkube

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  dev-requirements.txt  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/djtasks/: admin.py  apps.py  models.py  signals.py  tasks.py
apps/djtasks/migrations/: 0001_initial.py
djkube/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
helm/djkube/: Chart.yaml  values.yaml
helm/djkube/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/djkube/templates/tests/: test-connection.yaml
helm/djkube/templates/web/: deployment.yaml  hpa.yaml  service.yaml
helm/djkube/templates/worker/: deployment.yaml  hpa.yaml
