[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "djkube"
version = "0.0.1"
dependencies = [
    "django",
    "gunicorn",
    "psycopg2-binary",
    "celery[redis]",
    "django-celery-results",
    "django-celery-beat",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
]

[tool.isort]
profile = "black"

[tool.mypy]
no_strict_optional = "True"
